fix command on yml file

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,6 @@
         "destination": "/index.html"
       }
     ],
-    "predeploy": ["cd frontend && pnpm install && pnpm run build"]
+    "predeploy": ["cd frontend && npm install && npm run build"]
   }
 }
