--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,15 @@
 {
-  "name": "api-storydots",
-  "type": "api",
-  "buildCommand": "bash build.sh",
-  "devCommand": "pnpm start:dev",
-  "main": "dist/main.js"
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/main.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.js"
+    }
+  ]
 }
